--- a/Pages/about.html
+++ b/Pages/about.html
@@ -52,7 +52,7 @@
           <h2>Meet the directors</h2>
             <div class="people_container">
               <div class="box-nikita">
-                <img src="../IMG/avatar-nikita.jpg" alt="Nikita Marks">
+                <img class="about_main1_img" src="../IMG/avatar-nikita.jpg" alt="Nikita Marks">
                 <div class="name"><p>Nikita Marks</p></div>
                 <div class="job">Founder & CEO</div>
                 <div class="description"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
@@ -60,7 +60,7 @@
                   <div class="rectangle-copy"></div></button>
               </div>
               <div class="box-christian">
-                <img src="../IMG/avatar-christian.jpg" alt="Cristian Duncan">
+                <img class="about_main1_img" src="../IMG/avatar-christian.jpg" alt="Cristian Duncan">
                 <div class="name"><p>Cristian Duncan</p></div>
                 <div class="job">Co-founder & COO</div>
                 <div class="description"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
@@ -68,7 +68,7 @@
                   <div class="rectangle-copy"></div></button>
               </div>
               <div class="box-cruz">
-                <img src="../IMG/avatar-cruz.jpg" alt="Cruz Hamer">
+                <img class="about_main1_img" src="../IMG/avatar-cruz.jpg" alt="Cruz Hamer">
                 <div class="name"><p>Cruz Hamer</p></div>
                 <div class="job">Co-founder & CTO</div>
                 <div class="description"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
@@ -76,7 +76,7 @@
                   <div class="rectangle-copy"></div></button>
               </div>
               <div class="box-drake">
-                <img src="../IMG/avatar-drake.jpg" alt="Drake Heaton">
+                <img class="about_main1_img" src="../IMG/avatar-drake.jpg" alt="Drake Heaton">
                 <div class="name"><p>Drake Heaton</p></div>
                 <div class="job">Business Development Lead</div>
                 <div class="description"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
@@ -84,7 +84,7 @@
                   <div class="rectangle-copy"></div></button>
               </div>
               <div class="box-griffin">
-                <img src="../IMG/avatar-griffin.jpg" alt="Griffin Wise">
+                <img class="about_main1_img" src="../IMG/avatar-griffin.jpg" alt="Griffin Wise">
                 <div class="name"><p>Griffin Wise</p></div>
                 <div class="job">Lead Marketing</div>
                 <div class="description"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
@@ -92,7 +92,7 @@
                   <div class="rectangle-copy"></div></button>
               </div>
               <div class="box-aden">
-                <img src="../IMG/avatar-aden.jpg" alt="Aden Allan">
+                <img class="about_main1_img" src="../IMG/avatar-aden.jpg" alt="Aden Allan">
                 <div class="name"><p>Aden Allan</p></div>
                 <div class="job">Lorem ipsum</div>
                 <div class="description"><p>“Empowered teams create truly amazing products. Set the north star and let them follow it.”</p> </div>
@@ -101,6 +101,7 @@
               </div>
             </div>
         </div>
+      
     </section>
         <section class="about-main_2">
             <img class="bg-pattern-about-4" src="../IMG/bg-pattern-about-4.svg" alt="background pattern">
