--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -31,6 +31,8 @@
         </div>
     </header>
     <main class="main_contact_us">
+    <img class="bg-pattern-about-2-contact-1" src="../IMG/bg-pattern-about-2-contact-1.svg" alt="background pattern">
+    <img class="bg-pattern-contact-2" src="../IMG/bg-pattern-contact-2.svg" alt="background pattern">
     <div class="abaut_text">
         <div class="column1">
         <div class="Main_name h1_small ">Contact</div>
