add mobile menu

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -19,15 +19,31 @@
     <header>
       <div class="header_nav">
         <div class="header_nav_links">
-            <div class="left_header">
-              <h2 class="h2 nav_h2">talent</h2>
+          <div class="left_header">
+            <h2 class="h2 nav_h2">talent</h2>
               <a class="nav link nav_word body_1" href="../index.html">home</a>
-              <a class="nav link nav_word body_1" href="about.html">about</a>
+              <a class="nav link nav_word body_1" href="#">about</a>
+          </div>
+          <div class="right_header">
+            <a class=" btn primary_btn-light body_1" href="contact.html">contact us</a>
+            <div class="open_btn" id="hambuger">
+              <svg  class="mobile_nav_open" xmlns="http://www.w3.org/2000/svg" width="20" height="17"><g fill="#FFF" fill-rule="evenodd"><path d="M0 0h20v3H0zM0 7h20v3H0zM0 14h20v3H0z"/></g></svg>
             </div>
-            <div class="right_header">
-              <a class=" btn primary_btn-light body_1" href="contact.html">contact us</a>
-            </div>
+          </div>
+          
         </div>
+        <div class="mobile_overlay_container" id="mobileNav">
+          <div class="mobile_nav_inner">
+            <p class="mobile_nav_close"><svg id="close" class="mobile_nav_close_btn" xmlns="http://www.w3.org/2000/svg" width="18" height="17"><path fill="#FFF" fill-rule="evenodd" d="M15.01.368l2.122 2.122-6.01 6.01 6.01 6.01-2.122 2.122L9 10.622l-6.01 6.01L.868 14.51 6.88 8.5.87 2.49 2.988.368 9 6.38 15.01.37z"/></svg></i></p>
+            <nav>
+              <ul>
+                <li><a class="nav link nav_word body_1" href="../index.html">home</a></li>
+                <li><a class="nav link nav_word body_1" href="#">about</a></li>
+              </ul>
+            </nav>
+            <div><a class=" btn primary_btn-light body_1" href="contact.html">contact us</a></div>
+          </div>
+        </div>	
       </div>
       <div class="Header_main">
         <img class="bg-pattern-about-1-mobile-nav-1" src="../IMG/bg-pattern-about-1-mobile-nav-1.svg" alt="background pattern">
@@ -168,5 +184,6 @@
     </footer>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script src="../JS/main.js"></script>
   </body>
 </html>
