--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -96,8 +96,8 @@
 						<h2 class="h2">talent</h2>
 					</div>
 					<div class="body_1 links">
-						<a href="../index.html">home</a>
-						<a href="about.html">about</a>
+						<a class="link_home"  href="../index.html">home</a>
+						<a class="link_aobut" href="about.html">about</a>
 					</div>
 				</div>
 				<div class="col-2 body_2">
