--- a/Pages/about.html
+++ b/Pages/about.html
@@ -21,15 +21,31 @@
     <header>
       <div class="header_nav">
         <div class="header_nav_links">
-            <div class="left_header">
-              <h2 class="h2 nav_h2">talent</h2>
+          <div class="left_header">
+            <h2 class="h2 nav_h2">talent</h2>
               <a class="nav link nav_word body_1" href="../index.html">home</a>
-              <a class="nav link nav_word body_1" href="about.html">about</a>
+              <a class="nav link nav_word body_1" href="#">about</a>
+          </div>
+          <div class="right_header">
+            <a class=" btn primary_btn-light body_1" href="contact.html">contact us</a>
+            <div class="open_btn" id="hambuger">
+              <svg  class="mobile_nav_open" xmlns="http://www.w3.org/2000/svg" width="20" height="17"><g fill="#FFF" fill-rule="evenodd"><path d="M0 0h20v3H0zM0 7h20v3H0zM0 14h20v3H0z"/></g></svg>
             </div>
-            <div class="right_header">
-              <a class=" btn primary_btn-light body_1" href="contact.html">contact us</a>
-            </div>
+          </div>
+          
         </div>
+        <div class="mobile_overlay_container" id="mobileNav">
+          <div class="mobile_nav_inner">
+            <p class="mobile_nav_close"><svg id="close" class="mobile_nav_close_btn" xmlns="http://www.w3.org/2000/svg" width="18" height="17"><path fill="#FFF" fill-rule="evenodd" d="M15.01.368l2.122 2.122-6.01 6.01 6.01 6.01-2.122 2.122L9 10.622l-6.01 6.01L.868 14.51 6.88 8.5.87 2.49 2.988.368 9 6.38 15.01.37z"/></svg></i></p>
+            <nav>
+              <ul>
+                <li><a class="nav link nav_word body_1" href="../index.html">home</a></li>
+                <li><a class="nav link nav_word body_1" href="#">about</a></li>
+              </ul>
+            </nav>
+            <div><a class=" btn primary_btn-light body_1" href="contact.html">contact us</a></div>
+          </div>
+        </div>	
       </div>
       <div class="Header_main">
         <img class="bg-pattern-about-1-mobile-nav-1" src="../IMG/bg-pattern-about-1-mobile-nav-1.svg" alt="background pattern">
@@ -56,12 +72,12 @@
               <div class="director">
                <div class="blank1">
                 <img src="../IMG/avatar-nikita.jpg" alt="Nikita Marks" class="avatar">
-                <p class="name">Nikita Marks</p>
-                <p class="position">Founder & CEO</p>
+                <div class="name"><p>Nikita Marks</p></div>
+                <div class="job">Founder & CEO</div>
                </div>
                <div class="blank2 hidden">
-                <p class="name">Nikita Marks</p>
-                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <div class="name"><p>Nikita Marks</p></div>
+                <div class="description"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
                 <div class="figures">
                   <svg class="bird" xmlns="http://www.w3.org/2000/svg" width="24" height="20"><path d="M24 2.557a9.83 9.83 0 01-2.828.775A4.932 4.932 0 0023.337.608a9.864 9.864 0 01-3.127 1.195A4.916 4.916 0 0016.616.248c-3.179 0-5.515 2.966-4.797 6.045A13.978 13.978 0 011.671 1.149a4.93 4.93 0 001.523 6.574 4.903 4.903 0 01-2.229-.616c-.054 2.281 1.581 4.415 3.949 4.89a4.935 4.935 0 01-2.224.084 4.928 4.928 0 004.6 3.419A9.9 9.9 0 010 17.54a13.94 13.94 0 007.548 2.212c9.142 0 14.307-7.721 13.995-14.646A10.025 10.025 0 0024 2.557z"/></svg>
               <svg class="in" xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path d="M18 0H2C.9 0 0 .9 0 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2zM6 17H3V8h3v9zM4.5 6.3c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.8 1.8-1.8 1.8zM17 17h-3v-5.3c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5V17H8V8h3v1.2c.5-.8 1.6-1.4 2.5-1.4 1.9 0 3.5 1.6 3.5 3.5V17z"/></svg>
@@ -218,5 +234,6 @@
     </footer>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script src="../JS/main.js"></script>
   </body>
 </html>
