--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@1,300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="CSS/style.css" />
 	<link rel="stylesheet" href="CSS/mainstyle2.css" />
+	<script src="https://kit.fontawesome.com/685c7d347e.js" crossorigin="anonymous"></script>
 	<title>Home Page</title>
 </head>
 
@@ -28,9 +29,24 @@
 				</div>
 				<div class="right_header">
 					<a class=" btn primary_btn-light body_1" href="Pages/contact.html">contact us</a>
+					<div class="open_btn" id="hambuger">
+						<svg  class="mobile_nav_open" xmlns="http://www.w3.org/2000/svg" width="20" height="17"><g fill="#FFF" fill-rule="evenodd"><path d="M0 0h20v3H0zM0 7h20v3H0zM0 14h20v3H0z"/></g></svg>
+					</div>
 				</div>
+				
 			</div>
-
+			<div class="mobile_overlay_container" id="mobileNav">
+				<div class="mobile_nav_inner">
+					<p class="mobile_nav_close"><svg id="close" class="mobile_nav_close_btn" xmlns="http://www.w3.org/2000/svg" width="18" height="17"><path fill="#FFF" fill-rule="evenodd" d="M15.01.368l2.122 2.122-6.01 6.01 6.01 6.01-2.122 2.122L9 10.622l-6.01 6.01L.868 14.51 6.88 8.5.87 2.49 2.988.368 9 6.38 15.01.37z"/></svg></i></p>
+					<nav>
+						<ul>
+							<li><a class="nav link nav_word body_1" href="index.html">home</a></li>
+							<li><a class="nav link nav_word body_1" href="Pages/about.html">about</a></li>
+						</ul>
+					</nav>
+					<div><a class=" btn primary_btn-light body_1" href="Pages/contact.html">contact us</a></div>
+				</div>
+			</div>	
 		</div>
 		<div class="Header_banner">
 			<img class="bg-pattern-home-1" src="IMG/bg-pattern-home-1.svg" alt="background pattern">
@@ -155,8 +171,8 @@
 						<h2 class="h2">talent</h2>
 					</div>
 					<div class="body_1 links">
-						<a href="index.html">home</a>
-						<a href="Pages/about.html">about</a>
+						<a class="link_home" href="index.html">home</a>
+						<a class="link_aobut" href="Pages/about.html">about</a>
 					</div>
 				</div>
 				<div class="col-2 body_2">
@@ -171,8 +187,6 @@
 				<div class="icons">
 					<a href="https://facebook.com">
 						<ion-icon name="logo-facebook"></ion-icon>
-						<i class="fa-brands fa-facebook-f"></i>
-
 						<a href="https://pinterest.com">
 							<ion-icon class="icon" name="logo-pinterest"></ion-icon>
 						</a>
@@ -188,6 +202,7 @@
 	</footer>
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+	<script src="JS/main.js"></script>
 </body>
 
 </html>
