--- a/Pages/about.html
+++ b/Pages/about.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../CSS/footer.css">
     <link rel="stylesheet" href="../CSS/aboutMain1.css">
     <script src="../JS/script.js" defer></script>
+    <script src="https://kit.fontawesome.com/685c7d347e.js" crossorigin="anonymous"></script>
     <title>About Page</title>
   </head>
   <body>
@@ -172,12 +173,6 @@ AboutMain
           <a class=" btn primary_btn-dark body_1" href="contact.html">contact us</a>
         </div>
       </section>
-      <section class="footer_2">
-        <div class="footer_nav"></div>
-        <div class="footer_info"></div>
-        <div class="footer_links"></div>
-        <div class="footer_copyright"></div>
-      </section>
       <section class="footer-section-2">
         <div class="col1_col2">
           <div class="col-1">
@@ -185,8 +180,8 @@ AboutMain
               <h2 class="h2">talent</h2>
             </div>
             <div class="body_1 links">
-              <a href="../index.html">home</a>
-						  <a href="about.html">about</a>
+              <a class="link_home" href="../index.html">home</a>
+              <a class="link_aobut" href="about.html">about</a>
             </div>
           </div>
           <div class="col-2 body_2">
@@ -199,15 +194,15 @@ AboutMain
         </div>
         <div class="col-3">
           <div class="icons">
-            <a href="https://facebook.com">
-              <ion-icon name="logo-facebook"></ion-icon>
-              <i class="fa-brands fa-facebook-f"></i>
+              <a href="https://facebook.com">
+                <i class="fa-brands fa-square-facebook"></i>
+              </a>
   
               <a href="https://pinterest.com">
-                <ion-icon class="icon" name="logo-pinterest"></ion-icon>
+                <i class="fa-brands fa-pinterest"></i>
               </a>
               <a href="https://twitter.com">
-                <ion-icon class="icon" name="logo-twitter"></ion-icon>
+                <i class="fa-brands fa-twitter"></i>
               </a>
           </div>
           <div class="copyright">
