--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../CSS/style.css">
     <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
     <link rel="stylesheet" href="../CSS/footer.css">
+	<script src="https://kit.fontawesome.com/685c7d347e.js" crossorigin="anonymous"></script>
     <title>Contact Page</title>
 </head>
 <body>
@@ -96,8 +97,8 @@
 						<h2 class="h2">talent</h2>
 					</div>
 					<div class="body_1 links">
-						<a href="../index.html">home</a>
-						<a href="about.html">about</a>
+						<a class="link_home" href="../index.html">home</a>
+						<a class="link_aobut" href="about.html">about</a>
 					</div>
 				</div>
 				<div class="col-2 body_2">
@@ -110,15 +111,15 @@
 			</div>
 			<div class="col-3">
 				<div class="icons">
-					<a href="https://facebook.com">
-						<ion-icon name="logo-facebook"></ion-icon>
-						<i class="fa-brands fa-facebook-f"></i>
+						<a href="https://facebook.com">
+							<i class="fa-brands fa-square-facebook"></i>
+						</a>
 
 						<a href="https://pinterest.com">
-							<ion-icon class="icon" name="logo-pinterest"></ion-icon>
+							<i class="fa-brands fa-pinterest"></i>
 						</a>
 						<a href="https://twitter.com">
-							<ion-icon class="icon" name="logo-twitter"></ion-icon>
+							<i class="fa-brands fa-twitter"></i>
 						</a>
 				</div>
 				<div class="copyright">
