--- a/index.html
+++ b/index.html
@@ -185,15 +185,15 @@
 			</div>
 			<div class="col-3">
 				<div class="icons">
-					<a href="https://facebook.com">
-						<ion-icon name="logo-facebook"></ion-icon>
-						<i class="fa-brands fa-facebook-f"></i>
+						<a href="https://facebook.com">
+							<i class="fa-brands fa-square-facebook"></i>
+						</a>
 
 						<a href="https://pinterest.com">
-							<ion-icon class="icon" name="logo-pinterest"></ion-icon>
+							<i class="fa-brands fa-pinterest"></i>
 						</a>
 						<a href="https://twitter.com">
-							<ion-icon class="icon" name="logo-twitter"></ion-icon>
+							<i class="fa-brands fa-twitter"></i>
 						</a>
 				</div>
 				<div class="copyright">
