--- a/Pages/about.html
+++ b/Pages/about.html
@@ -54,7 +54,7 @@
           <div><h1>About</h1></div>
           <div>
             <hr class="about_banner_section_divider"></hr>
-            <p>
+            <p class="maim_description_2">
             We help companies build dynamic teams made up of top global talent.
             Using our network of passionate professionals we drive innovation and
             deliver incredible outcomes. Talented, diverse teams shape the best
