--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -53,7 +53,7 @@
     <img class="bg-pattern-contact-2" src="../IMG/bg-pattern-contact-2.svg" alt="background pattern">
     <div class="abaut_text">
         <div class="column1">
-        <div class="Main_name h1_small ">Contact</div>
+        <p class="Main_name h1_small ">Contact</p>
         <div class="Main_description ">Ask us about</div>
         <div class="Main_description_p ">
             <div class="Main_description_p_1">
