--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -50,7 +50,8 @@
     </header>
     <main class="main_contact_us">
     <img class="bg-pattern-about-2-contact-1" src="../IMG/bg-pattern-about-2-contact-1.svg" alt="background pattern">
-    <img class="bg-pattern-contact-2" src="../IMG/bg-pattern-contact-2.svg" alt="background pattern">
+    <svg class="bg-pattern-contact-2-clone" xmlns="http://www.w3.org/2000/svg" width="201" height="100"><g fill="none" fill-rule="evenodd"><path fill="#012F34" d="M.5 100.5C.5 45.272 45.272.5 100.5.5s100 44.772 100 100-44.772 100-100 100-100-44.772-100-100zm67 0c0 18.225 14.775 33 33 33s33-14.775 33-33-14.775-33-33-33-33 14.775-33 33z"/><path fill="#79C8C7" d="M43.5.5v43H.5V.5z"/><path fill="#F67E7E" d="M.5 124.986c0-55.228 44.772-100 100-100s100 44.772 100 100c0 55.229-44.772 100-100 100s-100-44.771-100-100zm67 0c0 18.226 14.775 33 33 33s33-14.774 33-33c0-18.225-14.775-33-33-33s-33 14.775-33 33z"/></g></svg>
+	<img class="bg-pattern-contact-2" src="../IMG/bg-pattern-contact-2.svg" alt="background pattern">
     <div class="abaut_text">
         <div class="column1">
         <p class="Main_name h1_small ">Contact</p>
@@ -71,7 +72,7 @@
         </div>
     </div>
 </div>
-<div= class="column2">
+<div class="column2">
         <div class="form">
             <form class="forms_1" id="form">
                 <input type="text" id="name" name="name" class="form_inputs name" placeholder="Name" required>
