--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -85,7 +85,7 @@
                 <div  class="text_eror" id="title-errors"></div>
                 <input type="text" id="mesage" name="name" class="form_inputs Message" placeholder="Message" required>
                 <div  class="text_eror" id="mesage-errors"></div>
-                <div class="knopka"><input type="submit" value="Submit" class="primary_btn-light:hover btn submit knopka"></div>
+                <div class="knopka"><input type="submit" value="submit" class="primary_btn-light:hover btn submit knopka"></div>
             </form>
         </div>
     </div>
