--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -57,18 +57,21 @@
         <p class="Main_name h1_small ">Contact</p>
         <div class="Main_description ">Ask us about</div>
         <div class="Main_description_p ">
-            <div class="Main_description_p_1">
-                <img class="home_main-1_description_icon" src="../IMG/icon-person.svg" alt="person icon">
-            <p class="Main_description_p h3">The quality of our talent network</p>
-            </div>
-            <div class="Main_description_p_1">
-                <img class="home_main-1_description_icon" src="../IMG/icon-cog.svg" alt="person icon">
-            <p class="Main_description_p h3">Usage & implementation of our software</p>
-            </div>
-            <div class="Main_description_p_1">
-                <img class="home_main-1_description_icon" src="../IMG/icon-chart.svg" alt="person icon">
-            <p class="Main_description_p h3">How we help drive innovation</p>
-            </div>
+			<div>
+				<div class="Main_description_p_1">
+					<img class="home_main-1_description_icon" src="../IMG/icon-person.svg" alt="person icon">
+				<p class="Main_description_p h3">The quality of our talent network</p>
+				</div>
+				<div class="Main_description_p_1">
+					<img class="home_main-1_description_icon" src="../IMG/icon-cog.svg" alt="person icon">
+				<p class="Main_description_p h3">Usage & implementation of our software</p>
+				</div>
+				<div class="Main_description_p_1">
+					<img class="home_main-1_description_icon" src="../IMG/icon-chart.svg" alt="person icon">
+				<p class="Main_description_p h3">How we help drive innovation</p>
+				</div>
+			</div>
+            
         </div>
     </div>
 </div>
