--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</div>
 			<div class="mobile_overlay_container" id="mobileNav">
 				<div class="mobile_nav_inner">
-					<p class="mobile_nav_close"><svg id="close" class="mobile_nav_close_btn" xmlns="http://www.w3.org/2000/svg" width="18" height="17"><path fill="#FFF" fill-rule="evenodd" d="M15.01.368l2.122 2.122-6.01 6.01 6.01 6.01-2.122 2.122L9 10.622l-6.01 6.01L.868 14.51 6.88 8.5.87 2.49 2.988.368 9 6.38 15.01.37z"/></svg></i></p>
+					<p class="mobile_nav_close"><svg id="close" class="mobile_nav_close_btn" xmlns="http://www.w3.org/2000/svg" width="18" height="17"><path fill="#FFF" fill-rule="evenodd" d="M15.01.368l2.122 2.122-6.01 6.01 6.01 6.01-2.122 2.122L9 10.622l-6.01 6.01L.868 14.51 6.88 8.5.87 2.49 2.988.368 9 6.38 15.01.37z"/></svg></p>
 					<nav>
 						<ul>
 							<li><a class="nav link nav_word body_1" href="index.html">home</a></li>
